--- a/views/event/event-create.hbs
+++ b/views/event/event-create.hbs
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <br>
@@ -69,4 +69,3 @@
         </div>
     </div>
 </div>
-<br>
