--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,12 +2,10 @@
     <br>
     <h1>WE HAVE ALL THE EVENTS THAT YOU NEED</h1>
     <hr>
-    <div class="mx-auto" style="width: 400px">
-        <img class="header-img" src="/images/hero.jpg" alt="index-photo">
-    </div>
+    <br>
     <div class="d-grid gap-2">
         <br>
-        <a href="/event/list" class="btn btn-dark block">View Events</a>
+        <a href="/event/list" class="btn btn-success">View Events</a>
         <br>
     </div>
 </div>
