--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,7 @@
                <li class="nav-item">
                   <a class="nav-link" href="/event/list">Events</a>
                </li>
-               {{#if userRole.is}}
+               {{#if userRole.isAdmin}}
                <li class="nav-item">
                   <a class="nav-link" href="/event/event-create">Create Event</a>
                </li>
