--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -23,21 +23,27 @@
             </ul>
         </div>
         <hr>
-        <div class="col-md-4">
+        <div class="row md-4">
             <h3>Eventos Guardados</h3>
             <hr>
-            <p>Próximamente aparecerán los eventos guardados</p>
+            {{#each events}}
+            <div class="col-md-4">
+                <h5><a class="text-decoration-none text-black" href="/event/{{_id}}">{{title}}</a></h5>
+                <article class="cards">
+                    <img src="{{eventImg}}" style="width: 50%" alt="">
+                </article>
+            </div>
+            {{/each}}
+        </div>
+        <div class="btns">
+            <div class="btn">
+                <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+            </div>
+            <div class="btn">
+                <a href="/user/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+            </div>
+            <form action="/user/{{_id}}/delete" method="POST" style="display: inline">
+                <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
+            </form>
         </div>
     </div>
-    <div class="btns">
-        <div class="btn">
-            <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
-        </div>
-        <div class="btn">
-            <a href="/user/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
-        </div>
-        <form action="/user/{{_id}}/delete" method="POST" style="display: inline">
-            <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
-        </form>
-    </div>
-</div>
