--- a/views/event/event-external-detail.hbs
+++ b/views/event/event-external-detail.hbs
@@ -26,7 +26,9 @@
                     <img src="/images/Stacked.png" style="width: 20%" alt="">
                 </li>
                 <br>
-                <button class="btn btn-primary">Save Event ❤️</button>
+                <div class="btn">
+                    <a href="/event/{{id}}/add" class="btn btn-primary">Save Event ❤️</a>
+                </div>
             </ul>
         </div>
         <hr>
