--- a/views/event/event-list.hbs
+++ b/views/event/event-list.hbs
@@ -13,7 +13,9 @@
             </article>
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
-
+            <div class="btn">
+                <a href="/event/event-detail" class="btn btn-primary">More Information</a>
+            </div>
         </div>
         {{/each}}
     </div>
@@ -26,7 +28,9 @@
             <p>{{title}}</p>
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
-
+            <div class="btn">
+                <a href="/event/event-detail" class="btn btn-primary">More Information</a>
+            </div>
         </div>
         {{/each}}
     </div>
