--- a/views/event/event-external-detail.hbs
+++ b/views/event/event-external-detail.hbs
@@ -27,7 +27,7 @@
                 </li>
                 <br>
                 <div class="btn">
-                    <a href="/event/{{id}}/add" class="btn btn-primary">Save Event ❤️</a>
+                    <a href="/external-event/{{id}}/add" class="btn btn-primary">Save Event ❤️</a>
                 </div>
             </ul>
         </div>
