--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -34,6 +34,14 @@
                 </article>
             </div>
             {{/each}}
+            {{#each externalEvents}}
+            <div class="col-md-4">
+                <h5><a class="text-decoration-none text-black" href="/event/{{id}}">{{title}}</a></h5>
+                <article class="cards">
+                    <img src="{{eventImg}}" style="width: 50%" alt="">
+                </article>
+            </div>
+            {{/each}}
         </div>
         <div class="btns">
             <div class="btn">
