--- a/views/event/event-internal-detail.hbs
+++ b/views/event/event-internal-detail.hbs
@@ -26,7 +26,7 @@
                 </li>
                 <br>
                 <div class="btn">
-                    <a href="/event/{{_id}}/add" class="btn btn-primary">Save Event ❤️</a>
+                    <a href="/event/{{_id}}/add" class="btn btn-dark">Save Event ❤️</a>
                 </div>
             </ul>
         </div>
@@ -44,9 +44,9 @@
             <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
         </div>
         <div class="btn">
-            <a href="/event/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+            <a href="/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
         </div>
-        <form action="/event/{{_id}}/delete" method="POST" style="display: inline">
+        <form action="/{{_id}}/delete" method="POST" style="display: inline">
             <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
         </form>
     </div>
