--- a/views/event/event-list.hbs
+++ b/views/event/event-list.hbs
@@ -16,7 +16,7 @@
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
             <div class="btn">
-                <a href="/internalEvent/{{_id}}" class="btn btn-primary">More Information</a>
+                <a href="/internalEvent/{{_id}}" class="btn btn-dark">More Information</a>
             </div>
         </div>
         {{/each}}
@@ -26,14 +26,13 @@
         <h2>Comunity Events</h2>
         <hr>
         {{#each externalEvents}}
-        <div class="col-4" style="margin-top: 20px;">
+        <div class="col ms-5" style="margin-top: 20px;">
             <h4><a class="text-decoration-none text-black" href="/externalEvent/{{id}}">{{title}}</a></h4>
-            <p>{{title}}</p>
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
-            <div class="btn">
-                <a href="/externalEvent/{{id}}" class="btn btn-primary">More Information</a>
-            </div>
+
+            <a href="/externalEvent/{{id}}" class="btn btn-dark">More Information</a>
+
             <br>
         </div>
         {{/each}}
