--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <br>
     <div class="d-grid gap-2">
         <br>
-        <a href="/event/list" class="btn btn-success">View Events</a>
+        <a href="/list" class="btn btn-success">View Events</a>
         <br>
     </div>
 </div>
