--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,7 @@
                   <a class="nav-link" href="/auth/signup">Sign Up</a>
                </li>
                {{/unless}}
-               {{#unless hideRegister}}
+               {{#unless hideSignUp}}
                <li class="nav-item">
                   <a class="nav-link" href="/auth/login">Log in</a>
                </li>
