--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -4,7 +4,7 @@
     <hr>
     <div class="row">
         <div class="col-md-4">
-            <img src="{{avatar}}" style="width: 80%; margin-bottom: 10px; margin-left: 20px" alt="#">
+            <img src="{{avatar}}" style="width: 80%; margin-bottom: 10px; margin-left: 20px" alt="not found">
         </div>
         <div class="col">
             <h3>Información:</h3>
