--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -28,7 +28,7 @@
             <hr>
             {{#each events}}
             <div class="col-md-4">
-                <h5><a class="text-decoration-none text-black" href="/event/{{_id}}">{{title}}</a></h5>
+                <h5><a class="text-decoration-none text-black" href="/internalEvent/{{_id}}">{{title}}</a></h5>
                 <article class="cards">
                     <img src="{{eventImg}}" style="width: 50%" alt="">
                 </article>
