--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -4,7 +4,7 @@
     <hr>
     <div class="row">
         <div class="col-md-4">
-            <img src="{{avatar}}" style="width: 60%" alt="#">
+            <img src="{{avatar}}" style="width: 80%; margin-bottom: 10px; margin-left: 20px" alt="not found">
         </div>
         <div class="col">
             <h3>Información:</h3>
@@ -28,7 +28,16 @@
             <hr>
             {{#each events}}
             <div class="col-md-4">
-                <h5><a class="text-decoration-none text-black" href="/event/{{_id}}">{{title}}</a></h5>
+                <h5><a class="text-decoration-none text-black" href="/internalEvent/{{_id}}">{{title}}</a></h5>
+                <article class="cards">
+                    <img src="{{eventImg}}" style="width: 50%" alt="">
+                </article>
+            </div>
+            {{/each}}
+            {{#each externalEvents}}
+            <div class="col-md-4">
+                <p>{{id}}</p>
+                <h5><a class="text-decoration-none text-black" href="/event/{{id}}">{{title}}</a></h5>
                 <article class="cards">
                     <img src="{{eventImg}}" style="width: 50%" alt="">
                 </article>
