--- a/views/event/event-external-detail.hbs
+++ b/views/event/event-external-detail.hbs
@@ -4,9 +4,6 @@
     <h1>{{title}} </h1>
     <hr>
     <div class="row">
-        {{!-- <div class="col-md-4">
-            <img src="{{eventImg}}" style="width: 100%" alt="#">
-        </div> --}}
         <div class="col">
             <h3>Info:</h3>
             <ul>
@@ -27,7 +24,7 @@
                 </li>
                 <br>
                 <div class="btn">
-                    <a href="/event/{{id}}/add" class="btn btn-primary">Save Event ❤️</a>
+                    <a href="/external-event/{{id}}/add" class="btn btn-dark">Save Event ❤️</a>
                 </div>
             </ul>
         </div>
@@ -44,12 +41,7 @@
         <div class="btn">
             <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
         </div>
-        <div class="btn">
-            <a href="/event/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
-        </div>
-        <form action="/event/{{_id}}/delete" method="POST" style="display: inline">
-            <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
-        </form>
+
     </div>
     {{/each}}
 </div>
