--- a/views/event/event-list.hbs
+++ b/views/event/event-list.hbs
@@ -7,34 +7,34 @@
         <hr>
         {{#each internalEvents}}
         <div class="col-md-4">
-            div<h3><a class="text-decoration-none text-black" href="/internalEvent/{{_id}}">{{title}}</a></h3>
+            <h3><a class="text-decoration-none text-black" href="/internalEvent/{{_id}}">{{title}}</a></h3>
             <article class="cards">
                 <img src="{{eventImg}}" style="width: 50%" alt="">
             </article>
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
             <div class="btn">
-                <a href="/event/event-detail" class="btn btn-primary">More Information</a>
+                <a href="/internalEvent/{{_id}}" class="btn btn-primary">More Information</a>
                 <div class="btn"> </div>
-                tn btn-dark
             </div>
         </div>
-
-        <div class="row">
-            <h2>Comunity Events</h2>
-            {{#each externalEvents}}
-            <div class="col-md-4">
-                <h3><a class="text-decoration-none text-black" href="/externalEvent/{{id}}">{{title}}</a></h3>
-                <p>{{title}}</p>
-                <p>Startcol ms-5tart}}</p>
-                <p>End: {{end}}</p>
-                <a href="/event/event-detail" class="btn btn-primary">More Information</a>
+        {{/each}}
+    </div>
+    <div class="row">
+        <h2>Comunity Events</h2>
+        <hr>
+        {{#each externalEvents}}
+        <div class="col-md-4">
+            <h3><a class="text-decoration-none text-black" href="/externalEvent/{{id}}">{{title}}</a></h3>
+            <article class="cards">
+                <img src="{{eventImg}}" style="width: 50%" alt="">
+            </article>
+            <p>Start: {{start}}</p>
+            <p>End: {{end}}</p>
+            <div class="btn">
+                <a href="/externalEvent/{{id}}" class="btn btn-dark">More Information</a>
+                <div class="btn">Home</div>
             </div>
         </div>
-        {{/each}
-        btn-dark btn <div ss="btn">
-            <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
-            v>
-            <br>
-            v>
-            -dark btn-db
+        {{/each}}
+    </div>
