--- a/views/event/event-list.hbs
+++ b/views/event/event-list.hbs
@@ -14,7 +14,7 @@
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
             <div class="btn">
-                <a href="/internalEvent/{{_id}}" class="btn btn-primary">More Information</a>
+                <a href="/internalEvent/{{_id}}" class="btn btn-dark">More Information</a>
                 <div class="btn"> </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <p>End: {{end}}</p>
             <div class="btn">
                 <a href="/externalEvent/{{id}}" class="btn btn-dark">More Information</a>
-                <div class="btn">Home</div>
+
             </div>
         </div>
         {{/each}}
