--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -59,7 +59,7 @@
                      <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
                         <form action="/auth/logout" method="POST">
-                           <button cla/authav-link">Logout</button>
+                           <button> Logout</button>
                         </form>
                      </ul>
                   </li>
