porfavorrr q no tengamos mas problemas

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -34,8 +34,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="imageInput" class="form-label">Image</label>
-                    <input type="url" class="form-control" id="imageInput" name="avatar">
+                    <label for="avatar" class="form-label">Image</label>
+                    <input type="url" class="form-control" id="avatar" name="avatar">
                     <div class="form-text">Enter the URL for your avatar picture.</div>
                 </div>
                 <div class="mb-3">
@@ -47,7 +47,7 @@
                     <input type="text" class="form-control" id="zipcode" name="zipcode"><br><br>
                 </div>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-dark block" >Submit</button>
+                    <button class="btn btn-dark block">Submit</button>
                     <br>
                 </div>
                 {{#if errorMessage}}
