--- a/views/event/event-internal-detail.hbs
+++ b/views/event/event-internal-detail.hbs
@@ -26,16 +26,14 @@
                 </li>
                 <br>
                 <div class="btn">
-                    <a href="/event/{{_id}}/add" class="btn btn-dark">Save Event ❤️</a>
+                    <a href="/{{_id}}/add" class="btn btn-dark">Save Event ❤️</a>
                 </div>
             </ul>
         </div>
         <hr>
         <br>
         <div class=" col">
-            <h3>Map:</h3>
-            <br>
-            <figure id="map"></figure>
+            <div id="map"></div>
         </div>
     </div>
     <hr>
