--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,11 @@ body {
 }
 
 #map {
-  height: 100vh;
-  width: 100%;
+  height: 400px;
+  width: 70%;
   background-color: rgb(194, 223, 248);
+}
+
+.avatar {
+  width: 100%;
 }
