--- a/views/user/profile-edit.hbs
+++ b/views/user/profile-edit.hbs
@@ -27,7 +27,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="avatar" class="form-label">Avatar:</label>
-                    <input type="text" class="form-control" id="avatar" name="avatar" value={{avatar}}>
+                    <input type="url" class="form-control" id="avatar" name="avatar" value={{avatar}}>
                 </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-dark block">Submit</button>
