--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -4,7 +4,7 @@
     <hr>
     <div class="row">
         <div class="col-md-4">
-            <img src="{{avatar}}" style="width: 80%; margin-bottom: 10px; margin-left: 20px" alt="not found">
+            <img src="{{avatar}}" class="avatar margin-bottom: 10px; margin-left: 20px" alt="">
         </div>
         <div class="col">
             <h3>Información:</h3>
@@ -46,10 +46,10 @@
         </div>
         <div class="btns">
             <div class="btn">
-                <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+                <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
             </div>
             <div class="btn">
-                <a href="/user/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+                <a href="/user/{{_id}}/edit" class="btn btn-dark mt-3 mb-5">Edit</a>
             </div>
             <form action="/user/{{_id}}/delete" method="POST" style="display: inline">
                 <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
