new changes like the navbar

--- a/views/event/event-internal-detail.hbs
+++ b/views/event/event-internal-detail.hbs
@@ -26,7 +26,7 @@
                 </li>
                 <br>
                 <div class="btn">
-                    <a href="/event/{{_id}}/add" class="btn btn-dark">Save Event ❤️</a>
+                    <a href="/{{_id}}/add" class="btn btn-dark">Save Event ❤️</a>
                 </div>
             </ul>
         </div>
