--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -27,7 +27,7 @@
             <h3>Eventos Guardados</h3>
             <hr>
             {{#each events}}
-            <div class="col-md-4">
+            <div class="col" style="width: 80%; margin-bottom: 10px; margin-left: 20px">
                 <h5><a class="text-decoration-none text-black" href="/internalEvent/{{_id}}">{{title}}</a></h5>
                 <article class="cards">
                     <img src="{{eventImg}}" style="width: 50%" alt="">
