--- a/views/event/event-edit.hbs
+++ b/views/event/event-edit.hbs
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h1>Edit Event</h1>
-            <form action="/event/{{_id}}/edit" method="POST">
+            <form action="/{{_id}}/edit" method="POST">
                 <div class="mb-3">
                     <label for="title" class="form-label">Event Title</label>
                     <input type="text" class="form-control" id="title" name="title" value="{{title}}">
