--- a/views/event/event-external-detail.hbs
+++ b/views/event/event-external-detail.hbs
@@ -24,7 +24,7 @@
                 </li>
                 <br>
                 <div class="btn">
-                    <a href="/external-event/{{id}}/add" class="btn btn-dark">Save Event ❤️</a>
+                    <a href="/{{id}}/add" class="btn btn-dark">Save Event ❤️</a>
                 </div>
             </ul>
         </div>
