--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
     <br>
     <h1>WE HAVE ALL THE EVENTS THAT YOU NEED</h1>
     <hr>
+    <p>Bienvenido, {{currentUser.username}}</p>
     <br>
     <div class="d-grid gap-2">
         <br>
