--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,42 @@
-<div class="container mt-5">
+<div class="container mt-5 text-center">
     <br>
     <h1>WE HAVE ALL THE EVENTS THAT YOU NEED</h1>
     <hr>
-    <p>Bienvenido, {{currentUser.username}}</p>
+
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class=" carousel-item active">
+                <img src="/images/festival.avif" class="d-block w-100 img-principal" alt="festival">
+            </div>
+            <div class="carousel-item">
+                <img src="/images/teatro.avif" class="d-block w-100 img-principal" alt="teatro">
+            </div>
+            <div class="carousel-item">
+                <img src="/images/restaurants.avif" class="d-block w-100 img-principal" alt="restaurant">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <br>
     <div class="d-grid gap-2">
-        <br>
+
         <a href="/list" class="btn btn-success">View Events</a>
         <br>
     </div>
