--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="/stylesheets/style.css" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -50,7 +51,8 @@
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         {{#if loggedUsers}}
-                        <img src="{{loggedUsers.avatar}}" style="width: 60%" alt="avatar" class="logo-img">
+                        <span>Bienvenido, {{currentUser.username}}</span>
+                        <img src="{{loggedUsers.avatar}}" style="width: 20%" alt="avatar" class="logo-img">
                         {{else}}
                         <img
                            src="https://thumbs.dreamstime.com/b/default-avatar-profile-icon-vector-social-media-user-portrait-176256935.jpg"
