--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,14 +1,14 @@
-<div class="container mt-5">
+<div class="container text-center mt-5">
     <br>
     <h1>User Profile </h1>
     <hr>
     <div class="row">
         <div class="col-md-4">
-            <img src="{{avatar}}" class="avatar margin-bottom: 10px; margin-left: 20px" alt="">
+            <img src="{{avatar}}" class="avatar" style="margin-bottom: 30px; margin-left: 20px; width: 60%" alt="">
         </div>
         <div class="col">
             <h3>Información:</h3>
-            <ul>
+            <ul class="list-unstyled m-5">
                 <li> <strong>Username:</strong> {{username}} </li>
                 <br>
                 <li><strong>Email:</strong> {{email}}</li>
