--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,9 +1,9 @@
 <br>
-<div class="container">
+<div class="container align-content-center">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <br>
-            <h1>Log in</h1>
+            <h1 class="mt-5">Log in</h1>
             <hr>
             <form action="/auth/login" method="POST">
                 <div class="mb-3">
