--- a/views/event/event-create.hbs
+++ b/views/event/event-create.hbs
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container list">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <br>
-            <h1>New Event</h1>
+            <h1 class="mt-5">New Event</h1>
             <hr>
             <form action="/event/event-create" method="POST">
                 <div class="row">
