--- a/views/event/event-internal-detail.hbs
+++ b/views/event/event-internal-detail.hbs
@@ -32,17 +32,17 @@
         </div>
         <hr>
         <br>
-        <div class=" col">
+        <div class=" col align-content-center">
             <div id="map"></div>
         </div>
     </div>
     <hr>
     <div class="btns">
         <div class="btn">
-            <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+            <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
         </div>
         <div class="btn">
-            <a href="/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+            <a href="/{{_id}}/edit" class="btn btn-dark mt-3 mb-5">Edit</a>
         </div>
         <form action="/{{_id}}/delete" method="POST" style="display: inline">
             <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
