--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,54 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url(https://www.hostelworld.com/blog/wp-content/uploads/2017/04/field-day-london.jpg);
+  /* background-image: url(https://www.hostelworld.com/blog/wp-content/uploads/2017/04/field-day-london.jpg); */
+
   background-size: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.video_background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+  overflow: hidden;
+  background-image: url(tu_video.mp4);
+  background-repeat: repeat-y;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.icon {
+  width: 50px;
+  margin: 20px;
+
+}
+
+.icon-container {
+  margin-top: 100px;
+}
+
+.index {
+  margin-top: 200px;
+  height: 500px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+
+.index-btn {
+  margin-top: 70px;
+  width: 300px;
+}
+
+.list {
+  margin: 100px;
+  font-size: 1.2em;
+
 }
 
 .logo-img {
@@ -16,6 +61,7 @@ body {
   background-color: rgba(255, 255, 255, 0.677);
   backdrop-filter: blur(10px);
   color: black;
+  border-radius: 10px;
 }
 
 .dropdown {
