--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -3,9 +3,9 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <br>
-            <h1>Sign Up</h1>
+            <h1 class="mt-5">Sign Up</h1>
             <hr>
-            <form action="/auth/signup" method="POST">
+            <form action=" /auth/signup" method="POST">
                 <div class="mb-3 row">
                     <div class="col">
                         <label for="emailInput" class="form-label">Email</label>
