--- a/views/event/event-external-detail.hbs
+++ b/views/event/event-external-detail.hbs
@@ -39,7 +39,7 @@
     <hr>
     <div class="btns">
         <div class="btn">
-            <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+            <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
         </div>
 
     </div>
