--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,11 +9,16 @@
    <link rel="stylesheet" href="/stylesheets/style.css" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+   <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+   <video autoplay="autoplay" loop="loop" class="video_background" preload="auto" volume="0" />
+   <source src="/images/dj.mp4" type="video/mp4" />
+   </video />
+
+
+   <nav class="navbar navbar-expand-lg fixed-top bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
          <a class="navbar-brand" href="/"> <strong>{{appTitle}}</strong></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -73,6 +78,7 @@
          </div>
       </div>
    </nav>
+
 
    {{{body}}}
 
