--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,4 +1,4 @@
-<div class="container text-center mt-5">
+<div class="container text-center mt-5 list">
     <br>
     <h1>User Profile </h1>
     <hr>
@@ -49,7 +49,7 @@
                 <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
             </div>
             <div class="btn">
-                <a href="/user/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+                <a href="/user/{{_id}}/edit" class="btn btn-dark mt-3 mb-5">Edit</a>
             </div>
             <form action="/user/{{_id}}/delete" method="POST" style="display: inline">
                 <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
